--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -5,34 +5,61 @@
 <th:block th:include="~{fragments/nav}"></th:block>
 <main class="p-5 align-content-center bg-blur my-register-div">
     <section class="page-section bg-light" id="info">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-8 mx-auto text-center">
-                    <p class="large text-muted">
-                        Защо сайт за отличници? Защото този сайт ще бъде полезен за деца със знания, без пропуски в
-                        усвояването на съоветния материал,но затрудняващи се да решат някоя от по-сложните задачи от група Б или В на сборника посочен по-долу.
-                    </p>
-                    <p class="large text-muted"> Идеята дойде една събота, когато синът ми - шестокласник, пишеше
-                        поредното си домашно по математика.
-                        Помогнах му за една по-сложна задача.
-                        "Мамо, знаеш ли, много добре обясняваш. Всички ме питат къде ходя на уроци по математика и като
-                        им отговоря никъде - не ми вярват."- каза ми той.
-                        Замислих се. Както съм полезна на собственото си дете, така бих могла да бъда полезна и на други
-                        деца.
-                    </p>
-                    <p class="large text-muted">
-                        Обичам математиката, завършила съм с отличен математическа гимназия.С удоволствие започнах да
-                        записвам видео решения на задачите от сборника,
-                        по който синът ми учеше в училище. Така бе сложено началото. Дали ще продължа?
-                        От Вас зависи - ако намирате за полезно направеното от мен, ще добавям нови и нови ресурси, не
-                        само за 6-ти, но и за 7-ми и 5-ти клас.
-                    </p>
-                    <div>
-                        <img class="col-lg-8 mx-auto text-center" src="/img/sbornik.png" >
+            <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100 rounded" th:src="@{/img/{image}(image=${firstImg})}" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 rounded" th:src="@{/img/{image}(image=${secondImg})}" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block w-100 rounded" th:src="@{/img/{image}(image=${thirdImg})}" alt="Third slide">
                     </div>
                 </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
             </div>
-        </div>
+
+<!--        <div class="container">-->
+<!--            <div class="row">-->
+<!--                <div class="col-lg-8 mx-auto text-center">-->
+<!--                    <p class="large text-muted">-->
+<!--                        Защо сайт за отличници? Защото този сайт ще бъде полезен за деца със знания, без пропуски в-->
+<!--                        усвояването на съоветния материал,но затрудняващи се да решат някоя от по-сложните задачи от група Б или В на сборника посочен по-долу.-->
+<!--                    </p>-->
+<!--                    <p class="large text-muted"> Идеята дойде една събота, когато синът ми - шестокласник, пишеше-->
+<!--                        поредното си домашно по математика.-->
+<!--                        Помогнах му за една по-сложна задача.-->
+<!--                        "Мамо, знаеш ли, много добре обясняваш. Всички ме питат къде ходя на уроци по математика и като-->
+<!--                        им отговоря никъде - не ми вярват."- каза ми той.-->
+<!--                        Замислих се. Както съм полезна на собственото си дете, така бих могла да бъда полезна и на други-->
+<!--                        деца.-->
+<!--                    </p>-->
+<!--                    <p class="large text-muted">-->
+<!--                        Обичам математиката, завършила съм с отличен математическа гимназия.С удоволствие започнах да-->
+<!--                        записвам видео решения на задачите от сборника,-->
+<!--                        по който синът ми учеше в училище. Така бе сложено началото. Дали ще продължа?-->
+<!--                        От Вас зависи - ако намирате за полезно направеното от мен, ще добавям нови и нови ресурси, не-->
+<!--                        само за 6-ти, но и за 7-ми и 5-ти клас.-->
+<!--                    </p>-->
+<!--                    <div>-->
+<!--                        <img class="col-lg-8 mx-auto text-center" src="/img/sbornik.png" >-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
     </section>
     <th:block th:include="~{fragments/fot}"></th:block>
 </main>
