--- a/src/main/resources/templates/offer.html
+++ b/src/main/resources/templates/offer.html
@@ -56,22 +56,7 @@
             </div>
         </div>
     </section>
-    <footer class="footer py-4">
-        <div class="container">
-            <div class="row align-items-center">
-                <div class="col-lg-4 text-lg-left">Copyright © Дома6ното 2021</div>
-                <div class="col-lg-4 my-3 my-lg-0">
-
-                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
-
-                </div>
-                <div class="col-lg-4 text-lg-right">
-                    <a class="mr-3" href="#!">Privacy Policy</a>
-                    <a href="#!">Terms of Use</a>
-                </div>
-            </div>
-        </div>
-    </footer>
+    <th:block th:include="~{fragments/fot}"></th:block>
 </main>
 </body>
 
