--- a/src/main/resources/templates/role-delete.html
+++ b/src/main/resources/templates/role-delete.html
@@ -5,21 +5,28 @@
 
 <body >
 <th:block th:include="~{fragments/nav}"></th:block>
+
 <main class="p-5 align-content-center bg-blur my-register-div">
     <section class="page-section bg-light" id="role-add">
         <div class="container">
+            <div class="row rounded">
+                <div class="col-12">
+                    <th:block th:include="~{fragments/nav}"></th:block>
+
+                </div>
+            </div>
 
             <div class="row tm-mt-big justify-content-center">
                 <div class="col-xl-8 col-lg-10 col-md-12 col-sm-12">
                     <div class="bg-white tm-block">
                         <div class="row">
                             <div class="col-12">
-                                <h2 class="tm-block-title d-inline-block">Добавете нова роля</h2>
+                                <h2 class="tm-block-title d-inline-block">Изтриване на роля</h2>
                             </div>
                         </div>
                         <div class="row mt-4 tm-edit-product-row">
                             <div class="col-xl-7 col-lg-7 col-md-12">
-                                <form th:action="@{/roles/add}" method="POST"
+                                <form th:action="@{/roles/delete}" method="POST"
                                       class="tm-edit-product-form" >
                                     <div class="input-group mb-3">
                                         <label for="username" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Потребители</label>
@@ -45,7 +52,7 @@
 
                                     <div class="input-group mb-3">
                                         <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
-                                            <button type="submit" class="btn btn-primary">Добави
+                                            <button type="submit" class="btn btn-primary">Изтрий
                                             </button>
                                         </div>
                                     </div>
