--- a/src/main/resources/templates/video-add-limited.html
+++ b/src/main/resources/templates/video-add-limited.html
@@ -16,35 +16,49 @@
                         <h2 class="tm-block-title d-inline-block">Добавете видео-решение</h2>
                     </div>
                 </div>
+
+
+<!--                <form id="add-article-form" class="form w-25 mx-auto" th:action="@{/add}" th:method="post"-->
+<!--                      enctype="multipart/form-data">-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="add-article-title" class="font-weight-bold">Name</label>-->
+<!--                        <input type="text" class="form-control text-center" id="add-article-title" name="name" required="required">-->
+<!--                    </div>-->
+<!--                    <div class="form-group">-->
+<!--                        <label for="add-title-image" class="font-weight-bold">Picture</label>-->
+<!--                        <input type="file" class="form-control-file" id="add-title-image" name="img" required="required">-->
+<!--                    </div>-->
+<!--                    <hr class="hr-2 bg-dark w-25">-->
+<!--                    <div class="button-holder d-flex justify-content-center">-->
+<!--                        <button type="submit" class="btn btn-success">Add</button>-->
+<!--                    </div>-->
+<!--                </form>-->
+
+
+
                 <div class="row mt-4 tm-edit-product-row">
                     <div class="col-xl-7 col-lg-7 col-md-12">
-                        <form th:action="@{/video/add}" method="POST" th:object="${videoAddBindingModel}"
-                              class="tm-edit-product-form" >
+                        <form th:action="@{/video/addLimited}" method="POST" enctype="multipart/form-data" >
                             <div class="input-group mb-3">
                                 <label for="chapterName">Изберете тема</label>
                                 <select name="chapterName" id="chapterName" class="custom-select">
-                                   <option th:each="e:${chapterNames}" th:text="${e}" th:value="${e}"  selected>Изберете тема</option>
+                                   <option th:each="c:${chapterNames}" th:text="${c}" th:value="${c}"  selected>Изберете тема</option>
                                 </select>
                             </div>
                             <div class="input-group mb-3">
                                 <label for="videoName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Наименование
                                 </label>
-                                <input th:field ="*{videoName}" id="videoName" name ="videoName" type="text"
+                                <input  id="videoName" name ="videoName" type="text"
                                        class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"/>
                             </div>
-                            <div class="input-group mb-3 justify-content-center">
-                                <small th:if="${#fields.hasErrors('videoName')}" th:errors="*{videoName}"class="text-danger">наименованието трябва да е между 11 и 20 символа</small>
 
-                            </div>
-                            <div class="input-group mb-3">
-                                <label for="videoUrl" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">ВидеоUrl
-                                </label>
-                                <input th:field ="*{videoUrl}" id="videoUrl" name="videoUrl" type="text"
-                                       class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"
-                                       data-large-mode="true"/>
+
+                            <div class="form-group">
+                                <label for="upload-video" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">ВидеоUrl</label>
+                                <input type="file" class="form-control-file" id="upload-video" name="videoUrl"  required="required"/>
                             </div>
                             <div class="input-group mb-3 justify-content-center">
-                                <small th:if="${#fields.hasErrors('videoUrl')}" th:errors="*{videoUrl}"class="text-danger">наименованието трябва да повечв от 3 символа</small>
+<!--                                <small th:if="${#fields.hasErrors('videoUrl')}" th:errors="*{videoUrl}"class="text-danger">наименованието трябва да повечв от 3 символа</small>-->
                             </div>
                             <div class="input-group mb-3">
                                 <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
@@ -62,6 +76,7 @@
         </div>
     </div>
     </section>
+    <th:block th:include="~{fragments/fot}"></th:block>
     </main>
 </div>
 
