--- a/src/main/resources/templates/video-add-rating.html
+++ b/src/main/resources/templates/video-add-rating.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head>
-    <title>Bootstrap star rating example</title>
+
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-star-rating/4.0.2/css/star-rating.min.css" />
@@ -10,9 +10,8 @@
 <body>
 
 
-<div class="container">
-
-    <form action="/video/addRating" method="POST" th:object="${rating}">
+<div class="container"  >
+    <form  th:action="@{/video/addRating/{videoName}}" method="POST" th:object="${video}" >
     <h2>Bootstrap star rating example</h2>
 
 
@@ -21,9 +20,6 @@
     <input  th:field="*{stars}" id="input-1" name="input-1" class="rating rating-loading" data-min="0" data-max="5" data-step="0.1" value="2">
     <button class="btn btn-primary" type="submit">Submit form</button>
     </form>
-
-
-
 </div>
 
 
@@ -34,11 +30,5 @@
 
 </body>
 </html>
-<!--        <form action="/video/addRating" method="POST" th:object="${rating}" class="mt-5">-->
 
-<!--            <input value="0" type="hidden" class="rating" data-glyphicon="0"-->
-<!--                   th:field="*{stars}">-->
-
-<!--            <button class="btn btn-primary" type="submit">Submit form</button>-->
-<!--        </form>-->
 
