--- a/src/main/resources/templates/video-view.html
+++ b/src/main/resources/templates/video-view.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
+
 <th:block th:include="~{fragments/head}"></th:block>
 <body id="page-top">
 <!-- Navigation-->
 <th:block th:include="~{fragments/nav}"></th:block>
 <main class="p-5 align-content-center bg-blur my-register-div">
-    <form action="/video/view" method="GET"  class="tm-edit-product-form" >
-<section class="page-section" id="video-view">
-       <div class="embed-responsive embed-responsive-16by9">
-        <video width="320" height="240" controls controlsList="nodownload">
-            <source src="/img/video/стр112зад28.mp4" type="video/mp4">
-        </video>
-    </div>
+    <h1>Upload Successful</h1>
 
-</section>
+    <th:block  th:object="${video}">
+        <div class="row">
+            <h3 th:text="*{videoName}"></h3>
+            <div class="embed-responsive embed-responsive-16by9">
+                <video width="320" height="240" controls controlsList="nodownload">
+                    <source th:src="*{videoUrl}" type="video/mp4">
+                </video>
+            </div>
+            <a th:href="@{/video/addRating/{videoName}(videoName =*{videoName})}">Моля за вашата оценка</a>
 
-    </form>
+
+
+        </div>
+    </th:block>
 </main>
 
 
@@ -37,11 +43,5 @@
     </div>
 </footer>
 <!-- Bootstrap core JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-<!-- Third party plugin JS-->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-<!-- Core theme JS-->
-<script src="js/scripts.js"></script>
 
 </html>
