--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -15,6 +15,7 @@
                   АДМИНИСТРИРАНЕ
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="/statistics">Статистика</a>
                     <a class="dropdown-item" href="/roles/add">Въведи нова роля</a>
                     <a class="dropdown-item" href="/roles/delete">Изтрий роля</a>
                     <a class="dropdown-item" href="/unit/add">Въведи нов раздел</a>
@@ -34,7 +35,7 @@
 
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="/offer">какво предлагаме</a></li>
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" sec:authorize="isAuthenticated()" th:href="@{/unit/view}"> към решенията</a></li>
+                        <a class="nav-link js-scroll-trigger" sec:authorize="isAuthenticated()" th:href="@{/video/viewAll}"> към решенията</a></li>
                     <li class="nav-item">
 
                         <a class="nav-link js-scroll-trigger" sec:authorize="!isAuthenticated()"
