--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 
 <header class="masthead">
     <div class="container">
-        <div class="masthead-subheading">Вашият помощник в решаването на по-трудни задачи от за шести клас!</div>
+        <div class="masthead-subheading">Вашият помощник в решаването на по-трудни задачи за шести клас!</div>
         <div class="masthead-heading text">Сайт за отличници ;) </div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="/info">Разберете повече</a>
     </div>
