--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -9813,7 +9813,7 @@ a.text-danger:hover, a.text-danger:focus {
 }
 
 .text-light {
-    color: #f8f9fa !important;
+    color: #fed136 !important;
 }
 
 a.text-light:hover, a.text-light:focus {
