--- a/src/main/resources/templates/error-500.html
+++ b/src/main/resources/templates/error-500.html
@@ -4,7 +4,7 @@
 <body>
 <main class="p-5 align-content-center bg-blur my-register-div">
     <th:block th:include="~{fragments/nav}"></th:block>
-    <section class="page-section bg-light" id="unit-view">
+    <section class="page-section bg-light" id="error-view">
         <div class="container">
 
             <div class="row tm-mt-big justify-content-center">
