--- a/src/main/resources/templates/fragments/fot.html
+++ b/src/main/resources/templates/fragments/fot.html
@@ -7,7 +7,7 @@
                 <div class="col-lg-4 text-lg-left">Copyright © Дома6ното 2021</div>
                 <div class="col-lg-4 my-3 my-lg-0">
 
-                    <a class="btn btn-dark btn-social mx-2" href="#!"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/desislava.getovapetrova"><i class="fab fa-facebook-f"></i></a>
 
                 </div>
                 <div class="col-lg-4 text-lg-right">
@@ -22,6 +22,5 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+
 </th:block>
