--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -5,7 +5,20 @@
 <th:block th:include="~{fragments/nav}"></th:block>
 <main class="p-5 align-content-center bg-blur my-register-div">
     <section class="page-section bg-light" id="info">
-            <div id="carouselExampleIndicators" class="carousel slide " data-ride="carousel">
+        <div class="row">
+        <div class="col-lg-5">
+            <section>
+                <img src="/img/sbornik.png" alt="Exercise picture" width="100%">
+                <div class="text-center">
+                    <p> </p>
+                <a th:href="@{/video/viewAll}">ВИЖТЕ ВСИЧКИ НАЛИЧНИ ВИДЕО РЕШЕНИЯ </a>
+                <p></p>
+                <a th:href="@{/unit/view}">ПОТЪРСЕТЕ ПО РАЗДЕЛИ </a>
+                </div>
+            </section>
+        </div>
+            <div class="col-lg-7 my-auto ">
+            <div id="carouselExampleIndicators" class="carousel slide my-4 " data-ride="carousel">
                 <ol class="carousel-indicators">
                     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
                     <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -30,6 +43,9 @@
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
+            </div>
+            </div>
+
             </div>
 
 <!--        <div class="container">-->
