--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -21,10 +21,11 @@
                                th:errorclass="is-invalid"
                                type="text"
                                id="inputUsername"
+                               required minlength="3" maxlength="20"
                                class="form-control"
                                aria-describedby="usernameHelpInline">
                         <small id="usernameError"
-                               class="invalid-feedback text-light form-text bg-danger rounded">Username трябва да съдържа повече от три символа!</small>
+                               class="invalid-feedback text-light form-text bg-danger rounded">Username трябва да съдържа между 3 и 20 символа!</small>
 
                         <small th:if="${userExistsError}" id="usernameUniqueError"
                                class="text-light form-text bg-danger rounded">Този username вече е зает! </small>
@@ -50,6 +51,7 @@
                         <input name="password"
                                th:errorclass="is-invalid"
                                type="password"
+                               required minlength="5" maxlength="20"
                                id="inputPassword"
                                class="form-control"
                                aria-describedby="passwordHelpInline">
@@ -66,6 +68,7 @@
                                th:errorclass="is-invalid"
                                type="password"
                                id="inputConfirmPassword"
+                               required minlength="5" maxlength="20"
                                class="form-control"
                                aria-describedby="confirmPasswordHelpInline">
                         <small id="confirmPasswordError"
@@ -83,14 +86,9 @@
     </section>
     <th:block th:include="~{fragments/fot}"></th:block>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-    <!-- Contact form JS-->
     <script src="assets/mail/jqBootstrapValidation.js"></script>
     <script src="assets/mail/contact_me.js"></script>
-    <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+
 </main>
 </body>
 </html>
