--- a/src/main/resources/templates/unit-add.html
+++ b/src/main/resources/templates/unit-add.html
@@ -15,6 +15,7 @@
                         <div class="col-12">
                             <h2 class="tm-block-title d-inline-block">Добавете нов раздел</h2>
                         </div>
+
                     </div>
                     <div class="row mt-4 tm-edit-product-row">
                         <div class="col-xl-7 col-lg-7 col-md-12">
@@ -24,12 +25,15 @@
                                     <label for="unitName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Наименование
                                     </label>
                                     <input th:field ="*{unitName}" id="unitName" name ="unitName" type="text"
-                                            class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" >
+                                            class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" required minlength="3" maxlength="200" >
                                     <div>
                                     <small th:if="${#fields.hasErrors('unitName')}" th:errors="*{unitName}" id="unitNameError"
                                            class="text-danger">Наименованието трябва да съдържа повече от три символа!</small>
                                     </div>
-
+                                </div>
+                                <div>
+                                    <small th:if="${unitExistsError}"
+                                           class="text-danger">Раздел с такова име вече съществува!</small>
                                 </div>
 
 
