--- a/src/main/resources/templates/video-add-limited.html
+++ b/src/main/resources/templates/video-add-limited.html
@@ -13,29 +13,9 @@
             <div class="bg-white tm-block">
                 <div class="row">
                     <div class="col-12">
-                        <h2 class="tm-block-title d-inline-block">Добавете видео-решение</h2>
+                        <h2 class="tm-block-title d-inline-block">Добавете видео-решение < 10MB</h2>
                     </div>
                 </div>
-
-
-<!--                <form id="add-article-form" class="form w-25 mx-auto" th:action="@{/add}" th:method="post"-->
-<!--                      enctype="multipart/form-data">-->
-<!--                    <div class="form-group">-->
-<!--                        <label for="add-article-title" class="font-weight-bold">Name</label>-->
-<!--                        <input type="text" class="form-control text-center" id="add-article-title" name="name" required="required">-->
-<!--                    </div>-->
-<!--                    <div class="form-group">-->
-<!--                        <label for="add-title-image" class="font-weight-bold">Picture</label>-->
-<!--                        <input type="file" class="form-control-file" id="add-title-image" name="img" required="required">-->
-<!--                    </div>-->
-<!--                    <hr class="hr-2 bg-dark w-25">-->
-<!--                    <div class="button-holder d-flex justify-content-center">-->
-<!--                        <button type="submit" class="btn btn-success">Add</button>-->
-<!--                    </div>-->
-<!--                </form>-->
-
-
-
                 <div class="row mt-4 tm-edit-product-row">
                     <div class="col-xl-7 col-lg-7 col-md-12">
                         <form th:action="@{/video/addLimited}" method="POST" enctype="multipart/form-data" >
@@ -49,16 +29,22 @@
                                 <label for="videoName" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Наименование
                                 </label>
                                 <input  id="videoName" name ="videoName" type="text"
+                                       class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7" required minlength="11" maxlength="20"/>
+                            </div>
+                            <div class="input-group mb-3">
+                                <label for="description" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">Описание
+                                </label>
+                                <input  id="description" name ="description" type="text"
                                        class="form-control validate col-xl-9 col-lg-8 col-md-8 col-sm-7"/>
                             </div>
-
 
                             <div class="form-group">
                                 <label for="upload-video" class="col-xl-4 col-lg-4 col-md-4 col-sm-5 col-form-label">ВидеоUrl</label>
                                 <input type="file" class="form-control-file" id="upload-video" name="videoUrl"  required="required"/>
                             </div>
-                            <div class="input-group mb-3 justify-content-center">
-<!--                                <small th:if="${#fields.hasErrors('videoUrl')}" th:errors="*{videoUrl}"class="text-danger">наименованието трябва да повечв от 3 символа</small>-->
+                            <div>
+                                <small th:if="${!videoExistsError}"
+                                    class="text-danger">Видео-решение с такова наименование вече съществува!</small>
                             </div>
                             <div class="input-group mb-3">
                                 <div class="ml-auto col-xl-8 col-lg-8 col-md-8 col-sm-7 pl-0">
