--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -22,6 +22,7 @@
                     <a class="dropdown-item" href="/chapter/add">Въведи нова тема </a>
                     <a class="dropdown-item" href="/video/addLimited">Въведи ново видео-решение до 10МВ</a>
                     <a class="dropdown-item" href="/video/add">Въведи ново видео-решение > 20МВ</a>
+                    <a class="dropdown-item" href="/video/viewAll">Изтрий видео-решение </a>
                 </div>
             </div>
             <button class="navbar-toggler navbar-toggler-left" type="button" data-toggle="collapse"
