--- a/src/main/resources/templates/video-view-all.html
+++ b/src/main/resources/templates/video-view-all.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec='http://www.thymeleaf.org/extras/spring-security'>
 <th:block th:include="~{fragments/head}"></th:block>
 <body id="page-top">
 
@@ -37,15 +37,18 @@
                                         <a th:href="@{/video/view/{id}(id =*{id})}" th:text="*{videoName}"></a>
                                     </h4>
                                     <h5>безплатно</h5>
-                                    <p class="card-text" th:text="*{description}">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
+                                    <p class="card-text" th:text="*{description}"></p>
                                 </div>
                                 <div class="card-footer">
                                     <div class="d-flex justify-content-between align-items-center">
                                         <div class="btn-group">
-                                            <a th:href="@{/video/view/{id}(id =*{id})}"  type="button" class="btn btn-sm btn-outline-secondary">Details</a>
+                                            <a th:href="@{/video/view/{id}(id =*{id})}"  type="button" class="btn btn-sm btn-outline-secondary">Детайли</a>
                                         </div>
-                                        <div class="btn-group">
-                                            <a th:href="@{/video/viewAll/delete/{videoName}(videoName =*{videoName})}"  type="button" class="btn btn-sm btn-outline-secondary">Delete</a>
+                                        <div sec:authorize="hasRole('ROLE_ADMIN')" class="btn-group">
+                                            <a th:href="@{/video/update/{id}(id =*{id})}"  type="button" class="btn btn-sm btn-outline-secondary">Промени</a>
+                                        </div>
+                                        <div sec:authorize="hasRole('ROLE_ADMIN')" class="btn-group">
+                                            <a th:href="@{/video/delete/{id}(id =*{id})}"  type="button" class="btn btn-sm btn-outline-secondary">Изтрий</a>
                                         </div>
 
                                     </div>
