--- a/src/main/resources/templates/fragments/fot.html
+++ b/src/main/resources/templates/fragments/fot.html
@@ -6,21 +6,13 @@
             <div class="row align-items-center">
                 <div class="col-lg-4 text-lg-left">Copyright © Дома6ното 2021</div>
                 <div class="col-lg-4 my-3 my-lg-0">
-
                     <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/desislava.getovapetrova"><i class="fab fa-facebook-f"></i></a>
-
                 </div>
-                <div class="col-lg-4 text-lg-right">
-                    <a class="mr-3" href="#!">Privacy Policy</a>
-                    <a href="#!">Terms of Use</a>
-                </div>
+                <div class="col-lg-4 text-lg-right">doma6noto@gmail.com</div>
             </div>
         </div>
     </footer>
-    <!-- Bootstrap core JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Third party plugin JS-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-
 </th:block>
