--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -16,6 +16,7 @@
                 </button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                     <a class="dropdown-item" href="/statistics">Статистика</a>
+                    <a class="dropdown-item" href="/comments">Коментари</a>
                     <a class="dropdown-item" href="/roles/add">Въведи нова роля</a>
                     <a class="dropdown-item" href="/roles/delete">Изтрий роля</a>
                     <a class="dropdown-item" href="/unit/add">Въведи нов раздел</a>
