--- a/src/main/resources/templates/video-view-all.html
+++ b/src/main/resources/templates/video-view-all.html
@@ -12,7 +12,7 @@
             <div class="mt-5 col-sm-12 my-auto align-self-center">
                 <h5>Mоже да намерите търсеното видео-решение като въведете номера на страницата и/или задачата в даденото по-долу поле</h5>
                 <input id="searchInput" class="form-control mr-sm-2 w-50 " type="search"
-                       placeholder="Въведете стр. и зад." aria-label="Search">
+                       placeholder="Въведете стр. и/или зад." aria-label="Search">
                 <hr class="border-bottom w-50">
                 <h6>или да търсите по раздели и теми като използвате линка</h6>
                 <a th:href="@{/unit/view}">ТЪРСЕНЕ ПО РАЗДЕЛИ И ТЕМИ</a>
