--- a/src/main/resources/templates/video-details.html
+++ b/src/main/resources/templates/video-details.html
@@ -33,7 +33,7 @@
             <div class="container mt-5">
                 <div class="d-flex justify-content-center row ">
                     <div class="col-md-8">
-                        <h6>Ще се радваме да ни изпратите коментар за изгледаното видео-решение ;)</h6>
+                        <h6>Може да изпратите коментар или въпрос към изгледаното видео-решение ;)</h6>
                         <div class="d-flex flex-column comment-section ">
                               <div th:object="${video}" class="bg-blur text-light p-2 rounded">
                                   <div class="btn-group">
