--- a/src/main/resources/templates/comment-add.html
+++ b/src/main/resources/templates/comment-add.html
@@ -14,6 +14,8 @@
                     <div class="d-flex justify-content-center row ">
                         <div class="col-md-8">
                             <h6>Коментарът написан от Вас ще е видим само от администраторите на сайта! </h6>
+                            <br/>
+                            <h6>Aко съдържа въпрос, ще Ви отговорим лично на посочения в регистрацията e-mail! </h6>
                             <div class="d-flex flex-column comment-section ">
                                 <div  class="bg-blur text-light p-2 rounded">
 
