--- a/src/main/resources/templates/offer.html
+++ b/src/main/resources/templates/offer.html
@@ -45,7 +45,7 @@
                 <p></p>
 
                 <div class="text-center">
-                    <h3 class="section-heading text-uppercase">Всеки регистриран потребител има достъп до всички видео-решения на задачи! БЕЗПЛАТНО !!!
+                    <h3 class="section-heading text-uppercase">Всеки регистриран потребител има достъп до всички кратки уроци и видео-решения на задачи! БЕЗПЛАТНО !!!
                     </h3>
 
                     <p class="large text-muted">Само до края на 2021 г.!</p>
