--- a/src/main/resources/templates/role-delete.html
+++ b/src/main/resources/templates/role-delete.html
@@ -43,8 +43,8 @@
                                         <div>
                                             <input checked type="radio" id="user" name="role" value="USER">
                                             <label for="user">User</label><br/>
-                                            <input type="radio" id="vipUser" name="role" value="VIPUSER">
-                                            <label for="vipUser">VipUser</label><br/>
+                                            <input type="radio" id="moderator" name="role" value="MODERATOR">
+                                            <label for="moderator">Moderator</label><br/>
                                             <input type="radio" id="admin" name="role" value="ADMIN">
                                             <label for="admin">Admin</label><br/>
                                         </div>
