--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -10,10 +10,12 @@
             <section>
                 <img src="/img/sbornik.png" alt="Exercise picture" width="100%">
                 <div class="text-center">
-                    <p> </p>
+                    <p></p>
+                <a th:href="@{/lesson/viewAll}">ВИЖТЕ НАШИТЕ КРАТКИ УРОЦИ </a>
+                    <p></p>
                 <a th:href="@{/video/viewAll}">ВИЖТЕ ВСИЧКИ НАЛИЧНИ ВИДЕО РЕШЕНИЯ </a>
-                <p></p>
-                <a th:href="@{/unit/view}">ПОТЪРСЕТЕ ПО РАЗДЕЛИ </a>
+                    <p></p>
+                <a th:href="@{/unit/view}">ПОТЪРСЕТЕ ПО РЕШЕНИЯ ПО РАЗДЕЛИ </a>
                 </div>
             </section>
         </div>
@@ -45,37 +47,7 @@
                 </a>
             </div>
             </div>
-
             </div>
-
-<!--        <div class="container">-->
-<!--            <div class="row">-->
-<!--                <div class="col-lg-8 mx-auto text-center">-->
-<!--                    <p class="large text-muted">-->
-<!--                        Защо сайт за отличници? Защото този сайт ще бъде полезен за деца със знания, без пропуски в-->
-<!--                        усвояването на съоветния материал,но затрудняващи се да решат някоя от по-сложните задачи от група Б или В на сборника посочен по-долу.-->
-<!--                    </p>-->
-<!--                    <p class="large text-muted"> Идеята дойде една събота, когато синът ми - шестокласник, пишеше-->
-<!--                        поредното си домашно по математика.-->
-<!--                        Помогнах му за една по-сложна задача.-->
-<!--                        "Мамо, знаеш ли, много добре обясняваш. Всички ме питат къде ходя на уроци по математика и като-->
-<!--                        им отговоря никъде - не ми вярват."- каза ми той.-->
-<!--                        Замислих се. Както съм полезна на собственото си дете, така бих могла да бъда полезна и на други-->
-<!--                        деца.-->
-<!--                    </p>-->
-<!--                    <p class="large text-muted">-->
-<!--                        Обичам математиката, завършила съм с отличен математическа гимназия.С удоволствие започнах да-->
-<!--                        записвам видео решения на задачите от сборника,-->
-<!--                        по който синът ми учеше в училище. Така бе сложено началото. Дали ще продължа?-->
-<!--                        От Вас зависи - ако намирате за полезно направеното от мен, ще добавям нови и нови ресурси, не-->
-<!--                        само за 6-ти, но и за 7-ми и 5-ти клас.-->
-<!--                    </p>-->
-<!--                    <div>-->
-<!--                        <img class="col-lg-8 mx-auto text-center" src="/img/sbornik.png" >-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
     </section>
     <th:block th:include="~{fragments/fot}"></th:block>
 </main>
