--- a/src/main/resources/templates/comment-add.html
+++ b/src/main/resources/templates/comment-add.html
@@ -13,9 +13,11 @@
                 <div class="container mt-5">
                     <div class="d-flex justify-content-center row ">
                         <div class="col-md-8">
-                            <h6>Коментарът написан от Вас ще е видим само от администраторите на сайта! </h6>
-                            <br/>
-                            <h6>Aко съдържа въпрос, ще Ви отговорим лично на посочения в регистрацията e-mail! </h6>
+                            <h6>Коментарът написан от Вас ще е видим само от администраторите на сайта!  </h6>
+                            <p></p>
+                            <p>Ще се радваме, ако споделите вашите предложения и препоръки! Te ще ни помогнат да станем по-добри :) </p>
+                            <p></p>
+                            <p>Aко имате въпроси, или желаете да Ви помогнем в решаването на някоя задача, моля пишете на посочения от нас най-долу,вдясно email! </p>
                             <div class="d-flex flex-column comment-section ">
                                 <div  class="bg-blur text-light p-2 rounded">
 
