--- a/src/main/resources/templates/comments.html
+++ b/src/main/resources/templates/comments.html
@@ -7,7 +7,7 @@
 <th:block th:include="~{fragments/nav}"></th:block>
 
 <main class="p-5 align-content-center bg-blur my-register-div">
-    <section class="page-section bg-light" id="resource-add">
+    <section class="page-section bg-light" id="comments">
         <div class="row tm-mt-big justify-content-center">
             <div class="col-xl-8 col-lg-10 col-md-12 col-sm-12">
                 <div class="bg-white tm-block">
